test/raw_tests/fails/inherit_ko6.sol
pragma solidity >=0.6.0;
// SPDX-License-Identifier: UNLICENSED

contract C1 {
  function f() public pure override {}
}

/*
Error: Function has override specified but does not override anything.
*/
